fixed image alignment in posts

--- a/assets/css/custom/_reboot.scss
+++ b/assets/css/custom/_reboot.scss
@@ -24,3 +24,9 @@ blockquote {
     text-shadow:      $title-shadow;
   }
 }
+
+.post-content img {
+  display: block;
+  margin: auto;
+  width: 90%;
+}
